Enable lancedb java build